...
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="90sp">
    </androidx.recyclerview.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />


    <LinearLayout
...
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners_coloured"
            android:orientation="vertical"
            android:radius="10sp">

            <LinearLayout
                android:id="@+id/addPostLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/postBodyInput"
                        style="@style/Widget.AppCompat.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16sp"
                        android:layout_marginTop="5sp"
                        android:layout_marginEnd="16sp"
...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/sendPostButton"
                        style="@style/Widget.AppCompat.Button.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_weight="1"
                        android:foregroundGravity="center_vertical|center|center_horizontal"
...

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <CheckBox
                            android:id="@+id/recipeIcon"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:background="@drawable/add_recipe"
                            android:button="@null"
                            android:checked="false"
                            android:maxWidth="30sp"
...
                            android:maxWidth="30sp"
                            android:maxHeight="30sp"
                            android:scaleType="fitCenter"
                            android:stateListAnimator="@animator/select" />

                        <CheckBox
                            android:id="@+id/reviewIcon"
                            android:layout_width="30sp"
                            android:layout_height="30sp"
                            android:background="@drawable/add_rating"
                            android:button="@null"
                            android:checked="false"
                            android:maxWidth="30sp"
...
                    android:layout_marginTop="10sp"
                    android:text="Rating:"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <RatingBar
                    android:id="@+id/postRecipeRating"
                    style="?android:attr/ratingBarStyleIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_marginBottom="10sp"
                    android:isIndicator="false"
...
