...

        <ImageView
            android:id="@+id/passwordTick"
            android:layout_width="35sp"
            android:layout_height="35sp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toEndOf="@+id/passwordEditText"
            app:layout_constraintTop_toBottomOf="@+id/emailEditText"
            app:srcCompat="@drawable/ic_clear_black_24dp"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/confirmPasswordTick"
            android:layout_width="35sp"
...
            android:layout_marginTop="20dp"
            android:background="#3D4450"
            android:text="Register"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <EditText
            android:id="@+id/displayNameEditText"
            android:layout_width="250sp"
            android:layout_height="35sp"
            android:layout_marginTop="10sp"
...
