...
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/LetsCook"
            android:layout_toEndOf="@+id/ReturnButton"
            android:background="@drawable/click_favourite"
            android:button="@null"
            android:checked="false"
            android:maxWidth="20sp"
            android:maxHeight="60sp"
            android:scaleType="fitCenter"
...
            app:srcCompat="@drawable/scran" />

        <FrameLayout
            android:id="@+id/RecipeFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/tabLayout2"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
...
                        android:text="Ingredients"
                        android:textColor="#ffffff" />

                    <com.google.android.material.tabs.TabItem
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Reviews" />

                </com.google.android.material.tabs.TabLayout>
            </LinearLayout>
        </FrameLayout>

        <TextView
...
