...
    <string name="planner_dinner">Dinner</string>
    <string name="post_title">Post title</string>
    <string name="enter_post_text_here">Enter post text here...</string>
    <string name="recipe">+ Recipe</string>
    <string name="review">+ Review</string>
    <string name="image">+ Image</string>
    <string name="post">Post</string>
    <string name="submit">Submit</string>

<!--    Recipe creation strings-->
    <string name="rcBasicInfo">Basic Info</string>7
    <string name="rcRecipeName">Recipe name</string>
    <string name="rcServes">Serves</string>
...
