...
                                android:layout_height="wrap_content"
                                android:singleLine="true"
                                android:textStyle="bold"
                                android:layout_alignParentLeft="true"/>

                            <ImageButton
                                android:id="@+id/postMenu"
                                android:layout_width="20sp"
                                android:layout_height="20sp"
                                app:srcCompat="@drawable/vert_menu"
                                android:layout_alignParentRight="true"
                                android:background="@android:color/transparent" />
                        </RelativeLayout>
...
