...

                    </LinearLayout>
                </LinearLayout>


                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/profileStreamTabs"
                    android:layout_width="match_parent"
                    android:layout_height="40sp"
                    app:tabIndicatorHeight="4sp"
                    app:tabIndicatorColor="@color/colorAccent">

                    <com.google.android.material.tabs.TabItem
...
